# colorful

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: commit-style.yml  dev-build.yml  release.yml
apps/android/: README.md  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/cpp/: CMakeLists.txt  colorful_jni.cpp
apps/android/app/src/main/java/sh/valerie/colorful/: MainActivity.kt  NativeCore.kt  PlaybackProtocol.kt  PlaybackService.kt  SecureTokenStore.kt  TidalClient.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
apps/android/app/src/main/res/values/: colors.xml  styles.xml
apps/design-lab/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/design-lab/src/: App.tsx  Icon.tsx  main.tsx  mock.ts  styles.css
apps/ios/: README.md
apps/linux/: CMakeLists.txt  README.md
apps/linux/applications/: colorful.desktop  colorful.metainfo.xml
apps/linux/qml/: AccountCard.qml  AppIcon.qml  ArtworkImage.qml  CatalogCard.qml  CatalogPage.qml  ColorButton.qml  DownloadsPage.qml  HomePage.qml  IconButton.qml  LibraryPage.qml  LyricsPanel.qml  Main.qml  MetadataLink.qml  OnboardingPage.qml  PlaylistCard.qml  ProviderAccountCard.qml  ProviderHeader.qml  ResizeHandle.qml  SettingsPage.qml  ShelfScrollButtons.qml  SoundCloudPage.qml  TidalPage.qml  TitleButton.qml  ToastOverlay.qml  TrackDelegate.qml  YouTubePage.qml
apps/linux/src/: backend.cpp  backend.h  buildinfo.cpp  buildinfo.h  buildinfo_generated.h.in  colorful.rc.in  corebridge.cpp  corebridge.h  credentialhelpermain.cpp  credentialstore.cpp  credentialstore.h  debuglog.cpp  debuglog.h  discordpresence.cpp  discordpresence.h  discordwidget.cpp  discordwidget.h  linuxplayback.cpp  linuxplayback.h  main.cpp  mpris.cpp  mpris.h  updatemanager.cpp  updatemanager.h  windowsmedia.cpp  windowsmedia.h
apps/linux/tests/: fake-provider.ts
apps/windows/: App.xaml  App.xaml.cs  Colorful.Windows.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest
apps/windows/Core/: CoreBridge.cs
apps/windows/Playback/: WindowsPlaybackService.cs
crates/colorful-core/: Cargo.toml
crates/colorful-core/include/: colorful_core.h
crates/colorful-core/migrations/: 0001_local_state.sql  0002_listening_history.sql  0003_local_playlists.sql
crates/colorful-core/src/: download.rs  engine.rs  ffi.rs  history.rs  lib.rs  media.rs  party.rs  playback.rs  playlist.rs  queue.rs  storage.rs
crates/colorful-core/src/providers/: account.rs  mod.rs  tidal.rs
docs/: architecture.md  connectivity.md  core-abi.md  discord-widget-config.json  discord-widget-profile.sample.json  discord-widget.md  macos-ci.md  provider-migration.md  soundcloud-login.md  storage.md  sync.md  todo.md  youtube-music-login.md
fixtures/tidal/: search-tracks.json
packaging/linux/: Dockerfile
packaging/windows/: colorful.iss
scripts/: AppRun-linux  build-android-core.sh  build-android.sh  build-linux.sh  build-windows-qt.ps1  build-windows.ps1  check-commit-style.sh  check-linux-deps.sh  check-release-version.sh  generate-release-notes.sh  package-linux-container-entrypoint.sh  package-linux-docker.sh  package-linux.sh  package-windows.ps1  provision-linux-packaging.sh  provision-windows-qt.ps1  qmake-linuxdeploy-wrapper.sh  run-design-lab.sh  run-linux.sh  run-windows-qt.ps1  run-windows.ps1  set-version.ps1  set-version.sh  test-linux.sh  test-storage-schema.sh  test-tidal-gstreamer.sh
